Fix secretInput using overflow grid column span

--- a/portal/src/graphql/portal/WebhookConfigurationScreen.module.css
+++ b/portal/src/graphql/portal/WebhookConfigurationScreen.module.css
@@ -19,7 +19,7 @@
 }
 
 .secretInput {
-  grid-column: 1 / span 12;
+  grid-column: 1 / span 8;
 
   @apply tablet:col-span-full;
 }
